--- a/src/main/resources/templates/car-register-purchase-result.html
+++ b/src/main/resources/templates/car-register-purchase-result.html
@@ -18,10 +18,9 @@
 
 <div class="whiteboard">
     <div class="receipt">
-    <div class="tabel">
-        <h1>Bilen er nu oprettet</h1>
-        <section>
-            <table>
+        <h1>Bil kvittering</h1>
+        <form class="receipt-form">
+            <table class="skema">
                 <tr>
                     <th>Vognummer</th>
                     <th>Stelnummer</th>
@@ -34,15 +33,15 @@
                     <th>CO2-udledning</th>
                 </tr>
                 <tr>
-                    <td><p th:text="${car.wagonNumber}"></p></td>
-                    <td><p th:text="${car.chassisNumber}"></p></td>
-                    <td><p th:text="${car.manufacturer}"></p></td>
-                    <td><p th:text="${car.model}"></p></td>
-                    <td><p th:text="${car.color}"></p></td>
-                    <td><p th:text="${car.equipmentLevel}"></p></td>
-                    <td><p th:text="${car.steelPrice}"></p></td>
-                    <td><p th:text="${car.registrationFee}"></p></td>
-                    <td><p th:text="${car.carbonEmission}"></p></td>
+                    <td th:text="${car.wagonNumber}"></td>
+                    <td th:text="${car.chassisNumber}"></td>
+                    <td th:text="${car.manufacturer}"></td>
+                    <td th:text="${car.model}"></td>
+                    <td th:text="${car.color}"></td>
+                    <td th:text="${car.equipmentLevel}"></td>
+                    <td th:text="${car.steelPrice}"></td>
+                    <td th:text="${car.registrationFee}"></td>
+                    <td th:text="${car.carbonEmission}"></td>
                 </tr>
             </table>
             <a th:href="registernewcartofleet">
