--- a/src/main/resources/templates/damage.html
+++ b/src/main/resources/templates/damage.html
@@ -18,39 +18,36 @@
 
 <div class="whiteboard">
     <div class="receipt">
-
-        <h1>Bilens nuværende skader</h1>
-        <form class="receipt-form">
-            <table class="skema">
-        <thead>
-        <tr>
-            <th> Skade </th>
-            <th> Pris </th>
-        </tr>
-        </thead>
-        <tbody>
-       <tr th:each="damages : ${damagesforcar}">
-            <td th:text="${damages.defectDescription}"> Skade </td>
-            <td th:text="${damages.price}"> Pris </td>
-        </tr>
-        </tbody>
-    </table>
-        </form>
 <h1>Tilføj skade:</h1>
         <div th:text="${error}" th:if="${error}" style="color: red"></div>
-<form action="#" th:action="@{'/damage?chassisnumber='+${chassisnumber}}" th:object="${damage}" method="post">
-
+<form action="#" th:action="@{'/damage?chassisnumber='+${chassisnumbercar}}" th:object="${damage}" method="post">
+    <input type ="hidden" th:name="chassisnumbercar" th:value="${chassisnumbercar}" />
     <p>Beskrivelse: </p>
     <input class="inputstyle" type="text" th:field="*{defectDescription}" />
     <p>Pris: </p>
     <input class="inputstyle" type="text" th:field="*{price}"/>
-
     <p>
         <input type="submit" value="Gem" class="buttom"/>
         <input type="reset" value="Nulstil felterne"  class="buttom"/>
     </p>
 </form>
-
+        <h1>Bilens nuværende skader</h1>
+        <form class="receipt-form">
+            <table class="skema">
+                <thead>
+                <tr>
+                    <th> Skade </th>
+                    <th> Pris </th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="damages : ${damagesforcar}">
+                    <td th:text="${damages.defectDescription}"> Skade </td>
+                    <td th:text="${damages.price}"> Pris </td>
+                </tr>
+                </tbody>
+            </table>
+        </form>
 </div>
 </div>
 </div>
