--- a/src/main/resources/templates/result-damage.html
+++ b/src/main/resources/templates/result-damage.html
@@ -23,8 +23,8 @@
                 <th>Pris</th>
             </tr>
             <tr>
-                <td><p th:text="${damage.defectDescription}"></p></td>
-                <td><p th:text="${damage.price}"></p></td>
+                <td th:text="${damage.defectDescription}"></td>
+                <td th:text="${damage.price}"></td>
             </tr>
 </table>
 </form>
