--- a/src/main/resources/templates/view-available-cars.html
+++ b/src/main/resources/templates/view-available-cars.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Alle biler</title>
@@ -18,6 +18,7 @@
                 <table>
                     <tr>
                         <th>Stelnummer</th>
+                        <th>Mærke</th>
                         <th>Model</th>
                         <th>Farve</th>
 
@@ -25,6 +26,7 @@
                     <tr th:name="availableCars" th:each="aCar : ${availableCars}">
 
                         <td th:text="${aCar.getChassisNumber}"></td>
+                        <td th:text="${aCar.getManufacturer()}"></td>
                         <td th:text="${aCar.getModel}"></td>
                         <td th:text="${aCar.getColor}"></td>
                     </tr>
