--- a/src/main/resources/templates/view-leased-cars.html
+++ b/src/main/resources/templates/view-leased-cars.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Udlejede Biler</title>
@@ -18,6 +18,7 @@
             <table>
                 <tr>
                     <th>Stelnummer</th>
+                    <th>Mærke</th>
                     <th>Model</th>
                     <th>Farve</th>
                     <th>Udlejet</th>
@@ -25,6 +26,7 @@
                 <tr th:name="rentedCars" th:each="rentedCars : ${rentedCars}">
 
                 <td th:text="${rentedCars.getChassisNumber}"></td>
+                <td th:text="${rentedCars.getManufacturer()}"></td>
                 <td th:text="${rentedCars.getModel}"></td>
                 <td th:text="${rentedCars.getColor}"></td>
                 <td th:text="${rentedCars.isRentedToString(rentedCars.isRented)}"></td>
