sælg biler kan nu sælges

--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -26,6 +26,7 @@
                 <a id="indkøb-bil" href="registernewcartofleet">Registrer indkøbt bil</a>
                 <a id="ny-lejeaftale" href="register-car">Registrer ny lejeaftale</a>
                 <a id="forhåndsaftale" href="selectchassisnumber?key=2">Registrer ny forhåndsaftale</a>
+                <a id="bilsolgt" href="selectchassisnumber?key=4">Sælg bil</a>
             </div>
 
             <br>
