--- a/src/main/resources/templates/register-advance-agreement-result.html
+++ b/src/main/resources/templates/register-advance-agreement-result.html
@@ -21,7 +21,7 @@
 
 
         <div class="receipt">
-        <h1>Forhåndsaftalen er nu oprettet</h1>
+        <h1 th:text="${header}"></h1>
         <section>
             <table class="skema">
                 <tr>
