--- a/src/main/resources/templates/select-chassisnumber-of-cars-return.html
+++ b/src/main/resources/templates/select-chassisnumber-of-cars-return.html
@@ -15,7 +15,7 @@
 
 <div class="whiteboard">
     <div class="tabel">
-<h1>Find den bil du vil registrere som returneret</h1>
+        <h1 th:text="${header}"></h1>
         <div th:text="${error}" th:if="${error}" style="color: red"></div>
 <form action="#" th:action="@{'/selectchassisnumber?key='+${key}}" method="post">
     <div class="">
@@ -31,13 +31,8 @@
             </select>
         </div>
     </div>
-    <p>
-        <input type="submit" value="Gem" class="buttom" />
-        <input type="reset" value="Nulstil feltet" class="buttom"/>
-    </p>
-
+        <input type="submit" th:value="${actionname}" class="buttom"/>
 </form>
-</a>
     </div>
 </div>
 
