--- a/src/main/resources/templates/select-chassisnumber-of-cars-return.html
+++ b/src/main/resources/templates/select-chassisnumber-of-cars-return.html
@@ -19,13 +19,13 @@
         <div th:text="${error}" th:if="${error}" style="color: red"></div>
 <form action="#" th:action="@{'/selectchassisnumber?key='+${key}}" method="post">
     <div class="">
-        <div class="labelType" value="">Vælg bil</div>
+        <div class="labelType" value=""></div>
         <br>
         <div class="">
             <form action="#" th:object="${car}" method="post">
             <select th:field="*{chassisNumber}" class="inputstyledrop">
                 <option  th:each="cars: ${availablecars}"
-                         th:text="${cars.color}+ ',' + ${cars.model}+',' + ${cars.chassisNumber}"
+                         th:text="${cars.chassisNumber}+ ', ' + ${cars.manufacturer}+', ' + ${cars.color}+', ' + ${cars.model}"
                          th:value="${cars.chassisNumber}">
                 </option>
             </select>
