--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -23,9 +23,9 @@
 
             <div class="nav-valg ">
                 <h3>Dataregistrering</h3>
-                <a id="indkøb-bil" href="registernewcartofleet">Registrer indkøbt bil</a>
-                <a id="ny-lejeaftale" href="register-car">Registrer ny lejeaftale</a>
-                <a id="forhåndsaftale" href="selectchassisnumber?key=2">Registrer ny forhåndsaftale</a>
+                <a id="indkøb-bil" href="registernewcartofleet">Opret indkøbt bil</a>
+                <a id="ny-lejeaftale" href="register-car">Ny lejeaftale</a>
+                <a id="forhåndsaftale" href="selectchassisnumber?key=2">Opret ny forhåndsaftale</a>
                 <a id="bilsolgt" href="selectchassisnumber?key=4">Sælg bil</a>
             </div>
 
@@ -33,9 +33,9 @@
 
             <div class="nav-valg">
                 <h3>Skade & Udbedring</h3>
-                <a id="registrer-bil-modtaget" href="selectchassisnumberreturn?key=3">Registrer bil modtaget retur</a>  <!-- Mangler INDSÆT href-->
+                <a id="registrer-bil-modtaget" href="selectchassisnumberreturn?key=3">Modtaget bil retur</a>
 
-                <a id="fejl-og-mangler" href="selectchassisnumber?key=1">Registrer fejl og mangler</a>
+                <a id="fejl-og-mangler" href="selectchassisnumber?key=1">Opret fejl og mangler</a>
 
             </div>
 
@@ -43,10 +43,10 @@
 
             <div class="nav-valg">
                 <h3>Forretningsudviklere</h3>
-                <a id="all-cars" href="all-cars">Vis oversigt over Alle biler</a>
-                <a id="rented-cars" href="rented-cars">Vis oversigt over udlejede biler</a>
-                <a id="available-cars" href="available-cars">Vis oversigt over ledige biler</a>
-                <a id="finance" href="finance">Vis pris på udlejede biler</a>
+                <a id="all-cars" href="all-cars">Oversigt over alle biler</a>
+                <a id="rented-cars" href="rented-cars">Oversigt over udlejede biler</a>
+                <a id="available-cars" href="available-cars">Oversigt over ledige biler</a>
+                <a id="finance" href="finance">Total pris på udlejede biler</a>
             </div>
 
             <div class="nav-valg">
