--- a/src/main/resources/templates/result-damage.html
+++ b/src/main/resources/templates/result-damage.html
@@ -30,13 +30,14 @@
 </form>
         <a th:href="'/damage?chassisnumber='+ ${damage.getChassisNumber()}">
             <button class="buttom">
-                Ny skade
+                Tilføj skade
             </button></a>
         <a href="/selectchassisnumber?key=1"><button class="buttom">
             Ny bil
         </button>
         </a>
-</div>
+
+    </div>
 </div>
 
     </div>
