--- a/src/main/resources/templates/create-renter-information.html
+++ b/src/main/resources/templates/create-renter-information.html
@@ -65,7 +65,7 @@
             <br>
             <input class="inputstyle" type="number" name="accountNumber" PLACEHOLDER="XXXXXXXXXX" id="accountNumber">
             <br>
-            <input type="submit" class="buttom">
+            <input type="submit" class="buttom" value="Videre">
         </form>
     </div>
 </div>
