--- a/src/main/resources/templates/create-subscription-information.html
+++ b/src/main/resources/templates/create-subscription-information.html
@@ -60,7 +60,7 @@
             <p class="labelType">Startdato/Udlejningsdato</p>
             <input type="date" name="pickupDate" class="inputstyle">
             <br>
-            <input type="submit" class="buttom">
+            <input type="submit" class="buttom" value="Opret aftale">
         </form>
     </div>
 </div>
