--- a/src/main/resources/templates/view-available-cars.html
+++ b/src/main/resources/templates/view-available-cars.html
@@ -14,6 +14,7 @@
     <div class="whiteboard">
         <div class="receipt">
             <h1>Alle ledige biler</h1>
+            <p class="error" th:text="${error}" th:if="${error}" style="color:red"></p>
             <form action="">
                 <table>
                     <tr>
