--- a/src/main/resources/templates/view-leased-cars.html
+++ b/src/main/resources/templates/view-leased-cars.html
@@ -14,6 +14,7 @@
 <div class="whiteboard">
     <div class="receipt">
         <h1>Alle udlejede biler</h1>
+        <p class="error" th:text="${error}" th:if="${error}" style="color:red"></p>
         <form action="">
             <table>
                 <tr>
