--- a/src/main/resources/templates/select-chassisnumber-of-cars.html
+++ b/src/main/resources/templates/select-chassisnumber-of-cars.html
@@ -38,22 +38,11 @@
 
 <script>
 
-    var forh = document.getElementById('forhåndsaftale');
+        document.getElementById('bilsolgt').style.backgroundColor = 'white';
 
-    forh.addEventListener("click", changeBaggroundColor());
+        document.getElementById('forhåndsaftale').style.backgroundColor = 'white';
 
-    function changeBaggroundColor(){
-        document.getElementById('forhåndsaftale').style.backgroundColor='white';
-    }
-
-    var fejl = document.getElementById('fejl-og-mangler');
-
-    fejl.addEventListener("click", changeBaggroundColor1());
-
-    function changeBaggroundColor1(){
-        document.getElementById('fejl-og-mangler').style.backgroundColor='white';
-
-    }
+        document.getElementById('fejl-og-mangler').style.backgroundColor = 'white';
 
 </script>
 </body>
