--- a/src/main/resources/templates/select-chassisnumber-of-cars.html
+++ b/src/main/resources/templates/select-chassisnumber-of-cars.html
@@ -1,3 +1,4 @@
+ <! -- Udarbejdet af Simon -->
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
@@ -36,6 +37,8 @@
     </div>
 </div>
 
+    
+     <! -- Javascript af Rasmus -->
 <script>
 
         document.getElementById('bilsolgt').style.backgroundColor = 'white';
