--- a/src/main/resources/templates/register-car.html
+++ b/src/main/resources/templates/register-car.html
@@ -28,7 +28,7 @@
             <br>
             <input type="number" name="chassis-number" class="inputstyle">
             <br>
-            <input type="submit" class="buttom">
+            <input type="submit" class="buttom" value="Videre">
         </form>
 
     </div>
