--- a/src/main/resources/static/fragment.css
+++ b/src/main/resources/static/fragment.css
@@ -9,7 +9,7 @@
 }
 
 
-
+/* inspiration fra https://www.w3schools.com/css/css_navbar_vertical.asp */
 .side-nav{
     width: 300px;
     height: 100%;
